--- a/cv-project/src/index.css
+++ b/cv-project/src/index.css
@@ -27,13 +27,10 @@ code {
   margin: 0;
 }
 
-.input {
+.input, .output {
   padding: 20px;
 }
 
-.output {
-  padding: 20px 40px;
-}
 
 .inputContainer {
   border: 1px solid #b1afaf;
